2011-11-01  Zeno Albisser  <zeno.albisser@nokia.com>

        [Qt] bad codegen, pointer diff in JSC::JSCallbackConstructor::JSCallbackConstructor
        https://bugs.webkit.org/show_bug.cgi?id=60951

        Adjust symbols visibility for WebCore.

        Reviewed by Simon Hausmann.

        * WebCore.pro:

2011-11-01  Pavel Feldman  <pfeldman@google.com>

        Not reviewed: add InspectorView.js entry into WebKit.qrc

        * inspector/front-end/WebKit.qrc:

2011-11-01  Pavel Feldman  <pfeldman@google.com>


        Web Inspector: introduce PanelContainer class, start moving panel management from inspector.js to the new class.
        https://bugs.webkit.org/show_bug.cgi?id=71272

        Reviewed by Yury Semikhatsky.

        * WebCore.gypi:
        * WebCore.vcproj/WebCore.vcproj:
        * inspector/compile-front-end.sh:
        * inspector/front-end/Drawer.js:
        (WebInspector.Drawer.prototype.show.animationFinished):
        (WebInspector.Drawer.prototype.show):
        (WebInspector.Drawer.prototype.hide):
        (WebInspector.Drawer.prototype._statusBarDragging):
        * inspector/front-end/ElementsPanel.js:
        (WebInspector.ElementsPanel.prototype.switchToAndFocus):
        (WebInspector.ElementsPanel.prototype.revealAndSelectNode):
        * inspector/front-end/ElementsTreeOutline.js:
        (WebInspector.ElementsTreeOutline.prototype.setVisible):
        * inspector/front-end/InspectorView.js: Added.
        (WebInspector.InspectorView):
        (WebInspector.InspectorView.prototype.addPanel):
        (WebInspector.InspectorView.prototype.currentPanel):
        (WebInspector.InspectorView.prototype._keyDown):
        (WebInspector.InspectorView.prototype._canGoBackInHistory):
        (WebInspector.InspectorView.prototype._goBackInHistory):
        (WebInspector.InspectorView.prototype._canGoForwardInHistory):
        (WebInspector.InspectorView.prototype._goForwardInHistory):